syntax = "proto3";

package pb;
import "error.proto";

service DataRWService {
    rpc ReadLines(ReadLinesRequest ) returns (stream ReadLinesResponse) {}
    rpc WriteLines(stream WriteLinesRequest) returns (WriteLinesResponse) {}
    rpc ListFiles (ListFilesReq ) returns (ListFilesResponse);
    rpc IsReady (IsReadyRequest) returns (IsReadyResponse);
    rpc CheckDir (CheckDirRequest) returns (CheckDirResponse);
}

message CheckDirRequest {
    string dir = 1;
}

message CheckDirResponse {
    string err_msg = 1;
    string err_file_name = 2;
}

message IsReadyRequest {
}

message IsReadyResponse {
    bool ready = 1;
}

message ListFilesReq {
    string  folderName = 1;
}

message ListFilesResponse{
    repeated string fileNames =1;
}

message ReadLinesRequest {
    string  fileName = 1;
    int64   lineNo = 2;
}

message ReadLinesResponse {
    string  linestr = 1 ;
     bool   isEof = 2;
}

message WriteLinesRequest {
    string fileName = 1;
    string key = 2;
    string value = 3;
}

message WriteLinesResponse {
    Error err = 1;
}






