syntax = "proto3";

package pb;

service ResourceManager {
  rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse){}
}

message CreateResourceRequest {
  string resource_id = 1;
  string creator_executor = 2;
  string job_id = 3;
  string creator_worker_id = 4;
}

message CreateResourceResponse {}

message ResourceError {
  ResourceErrorCode error_code = 1;
  string stack_trace = 2;
}

enum ResourceErrorCode {
  ResourceIDConflict = 0;
  ResourceTypeUnrecognized = 1;
  ResourceManagerInternalError = 2;
}